# biceps-check

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
examples/compliant/: key_vault.bicep  storage_account.bicep
examples/non_compliant/: aks.bicep  app_service.bicep  azure_functions.bicep  container_registry.bicep  cosmos_db.bicep  data_factory.bicep  event_hub.bicep  mysql.bicep  nsg.bicep  postgresql.bicep  redis_cache.bicep  service_bus.bicep  sql_server.bicep  storage_account.bicep  virtual_machine.bicep
src/biceps_check/: __init__.py  cli.py  config.py  runner.py
src/biceps_check/checks/: __init__.py
src/biceps_check/checks/analytics/: __init__.py
src/biceps_check/checks/compute/: __init__.py  aks.py  app_service.py  azure_functions.py  container_registry.py  virtual_machine.py
src/biceps_check/checks/database/: __init__.py  cosmos_db.py  mysql.py  postgresql.py  redis_cache.py  sql_server.py
src/biceps_check/checks/identity/: __init__.py  key_vault.py
src/biceps_check/checks/integration/: __init__.py  data_factory.py
src/biceps_check/checks/messaging/: __init__.py  event_hub.py  service_bus.py
src/biceps_check/checks/monitoring/: __init__.py
src/biceps_check/checks/networking/: __init__.py  nsg.py
src/biceps_check/checks/security/: __init__.py
src/biceps_check/checks/storage/: __init__.py  storage_account.py
src/biceps_check/output/: __init__.py  base.py  cli_formatter.py  json_formatter.py  sarif_formatter.py
src/biceps_check/parser/: __init__.py  bicep_parser.py  models.py
src/biceps_check/rules/: __init__.py  base.py  registry.py
src/biceps_check/utils/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_formatters.py  test_parser.py  test_registry.py  test_rules_storage.py  test_runner.py
